testdata/typechecker/error/BinopTest-err6.java
int main() {
            int x;
            x = 283 - false; // TE
		return 0;
}

